# Tetris

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
apps/web/: index.html  package.json
apps/web/src/: App.css  App.tsx  index.css
apps/web/src/components/: GameBoard.tsx  GameInfo.tsx
apps/web/src/hooks/: useGameConnection.ts  useKeyboardControls.ts
apps/web/src/stores/: gameStore.ts
apps/web/src/types/: protocol.ts
engine/python/: demo_agents.py  pyproject.toml
engine/python/api/: __init__.py  protocol.py  server.py
engine/python/tests/: __init__.py  test_agent.py  test_board.py  test_client.py  test_env.py  test_piece.py  test_rng.py
engine/python/tetris_core/: __init__.py  agent.py  board.py  env.py  features.py  piece.py  rng.py  rules.py  runner.py
engine/python/tetris_core/agents/: __init__.py  dellacherie.py  random_agent.py  smart_dellacherie.py
proto/schema/: v1.json
scripts/: dev.sh  gen-types.sh
